@@ -24,6 +24,17 @@
 # if set, errors and other issues are logged with syslog
 # debug=1
 
+# min_uid is the minimum uid to lookup via tacacs.  Setting this to 0 
+# means uid 0 (root) is never looked up, good for robustness and performance
+# Cumulus Linux ships with it set to 1001, so we never lookup our standard
+# local users, including the cumulus uid of 1000.  Should not be greater
+# than the local tacacs{0..15} uids
+min_uid=1001
+
+# This is a comma separated list of usernames that we never lookup via tacacs
+# Cumulus Linux ships with our standard users in the list.
+exclude_users=root,cumulus,quagga,ntp
+
 # The include keyword allows centralizing the tacacs+ server information
 # including the IP address and shared secret
 include=/etc/tacplus_servers
